manifests/environments/nostromo/gatekeeper/constraints.yaml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: namespaces-must-have-owner
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
    namespaces:
      - "b4mad-*"
      - "feeldata-*"
  parameters:
    message: "All application namespaces must have an `owner` label that points to an org email"
    labels:
      - key: b4mad.operate-first.cloud/owner
        allowedRegex: "^[a-zA-Z]+.b4mad.net$"
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: namespaces-must-have-manager
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
    namespaces:
      - "b4mad-*"
      - "feeldata-*"
  parameters:
    message: "All application namespaces must have an `managed-by` label"
    labels:
      - key: argocd.argoproj.io/managed-by
        allowedRegex: "^op1st-gitops$"
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sImageDigests
metadata:
  name: container-image-must-have-digest
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "b4mad-*"
      - "feeldata-*"
      - "op1st-*"
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: redhat
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "openshift-*"
  parameters:
    repos:
      - "quay.io/argoprojlabs/argocd-image-updater"
      - "quay.io/community-operator-pipeline-prod/authorino-operator"
      - "quay.io/community-operator-pipeline-prod/keycloak-operator"
      - "quay.io/openshift-release-dev"
      - "registry.access.redhat.com/"
      - "registry.connect.redhat.com/crunchydata/postgres-operator"
      - "registry.connect.redhat.com/enterprisedb"
      - "registry.redhat.io"
      - "ghcr.io/cloudnative-pg/cloudnative-pg"
      - "ghcr.io/cloudnative-pg/pgbouncer"
      - "ghcr.io/cloudnative-pg/postgresql"
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: op1st-b4mad
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - op1st-alertmanager
      - op1st-alertreceiver
      - op1st-gitops
      - op1st-peribolos
      - op1st-popeye
      - op1st-uptime
  parameters:
    repos:
      - "codeberg.org/goern"
      - "docker.io/bitnami/sealed-secrets-controller"
      - "docker.io/derailed/popeye"
      - "docker.io/grafana"
      - "gcr.io/tekton-releases"
      - "ghcr.io/cloudnative-pg/cloudnative-pg"
      - "ghcr.io/cloudnative-pg/pgbouncer"
      - "ghcr.io/cloudnative-pg/postgresql"
      - "ghcr.io/tektoncd-catalog/git-clone"
      - "openpolicyagent/"
      - "quay.io/argoprojlabs"
      - "quay.io/b4mad"
      - "quay.io/k3rnel-pan1c/uptime-kuma"
      - "quay.io/operate-first/"
      - "quay.io/sclorg/python-311-c9s"
      - "quay.io/thoth-station"
      - "registry.access.redhat.com/"
      - "registry.redhat.io"
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: op1st-pipelines
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - op1st-pipelines
  parameters:
    repos:
      - "cgr.dev/chainguard/git"
      - "codeberg.org/toolbxs/bxbdbt"
      - "gcr.io/k8s-prow/"
      - "gcr.io/k8s-staging-kustomize/kustomize"
      - "gcr.io/tekton-releases/github.com/tektoncd/pipeline"
      - "ghcr.io/tektoncd-catalog/git-clone"
      - "ghcr.io/astral-sh/uv:python3.12-bookworm-slim"
      - "ghcr.io/gitleaks/gitleaks"
      - "quay.io/buildah/stable"
      - "quay.io/fedora/nodejs-22"
      - "quay.io/operate-first/"
      - "quay.io/skopeo/stable"
      - "registry.redhat.io/openshift-pipelines/"
      - "registry.redhat.io/rhel8/buildah"
      - "registry.redhat.io/rhel8/skopeo"
      - "registry.redhat.io/rhel9/buildah"
      - "registry.redhat.io/rhel9/skopeo"
      - "us-docker.pkg.dev/k8s-infra-prow/images/"
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: cnpg
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "cnpg-system"
  parameters:
    repos:
      - "ghcr.io/cloudnative-pg/cloudnative-pg"
      - "registry.connect.redhat.com/enterprisedb"
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: b4mad-projects
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "b4mad-*"
  parameters:
    repos:
      - "codeberg.org/b4mad/"
      - "docker.io/ollama/ollama"
      - "docker.io/qdrant/qdrant"
      - "docker.io/renovate/renovate"
      - "gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/"
      - "ghcr.io/cloudnative-pg/cloudnative-pg"
      - "ghcr.io/cloudnative-pg/pgbouncer"
      - "ghcr.io/cloudnative-pg/postgresql"
      - "ghcr.io/element-hq/"
      - "ghcr.io/matrix-org/"
      - "ghcr.io/tektoncd-catalog/git-clone"
      - "image-registry.openshift-image-registry.svc:5000"
      - "quay.io/b4mad/"
      - "quay.io/castawayegr/open-webui"
      - "quay.io/keycloak/"
      - "registry.redhat.io/openshift-pipelines/"
      - "registry.redhat.io/rhel8/buildah"
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: feeldata-projects
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "feeldata-*"
  parameters:
    repos:
      - "cgr.dev/chainguard/git"
      - "codeberg.org/feeldata"
      - "gcr.io/k8s-staging-kustomize/kustomize"
      - "gcr.io/tekton-releases/github.com/tektoncd/pipeline"
      - "ghcr.io/cloudnative-pg/cloudnative-pg"
      - "ghcr.io/cloudnative-pg/pgbouncer"
      - "ghcr.io/cloudnative-pg/postgresql"
      - "ghcr.io/gitleaks/gitleaks"
      - "ghcr.io/tektoncd-catalog/git-clone"
      - "image-registry.openshift-image-registry.svc:5000"
      - "mcr.microsoft.com/playwright"
      - "quay.io/argoproj/argocd"
      - "quay.io/buildah/stable"
      - "quay.io/fedora/nodejs-20"
      - "quay.io/goern/opf-toolbox"
      - "quay.io/operate-first/"
      - "quay.io/skopeo/stable"
      - "registry.redhat.io/openshift-pipelines/"
      - "registry.redhat.io/rhel8/buildah"
      - "registry.redhat.io/rhel8/skopeo"
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sHttpsOnly
metadata:
  name: ingress-https-only
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: ["extensions", "networking.k8s.io"]
        kinds: ["Ingress"]
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockWildcardIngress
metadata:
  name: block-wildcard-ingress
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: ["extensions", "networking.k8s.io"]
        kinds: ["Ingress"]
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sStorageClass
metadata:
  name: storageclass-required
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["PersistentVolumeClaim"]
      - apiGroups: ["apps"]
        kinds: ["StatefulSet"]
  parameters:
    includeStorageClassesInMessage: true
